# cluster-service

./: .clang-tidy  Makefile.am  README.md  cluster-api-systemd.pc.in  cluster_api.pc.in  configure.ac
.github/workflows/: codeql-analysis.yml  codeql.yml
doc/: DEVELOPER_GUIDE.md  USER_GUIDE.md
example/: Makefile.am  cluster-client.c
include/: cluster_api.h  cluster_api_registernotify.h  cluster_api_shiftposition.h  cluster_api_speed.h  cluster_api_tacho.h  cluster_api_telltale.h  cluster_api_tripcomputer.h  ipc_protocol.h
lib/: Makefile.am  cluster-api-core.c  cluster-api-glib.c  cluster-api-sdevent.c  cluster-api-sdevent.h  cluster_api_internal.h  data-pool-client.c  data-pool-client.h  data-pool-static-configurator.c  data-pool-static-configurator.h  data-pool-storage.h  data-pool.c  data-pool.h
src/: Makefile.am  alarm-sound.c  alarm-sound.h  cluster-service-util.c  cluster-service-util.h  cluster-service.c  data-pool-service.c  data-pool-service.h  demo-data-generator.c  demo-data-generator.h  incbin.h  socketcan-receiver.c
src/sound/: Makefile.am  alarm-sound-config.c  alarm-sound-config.h  alarm-sound.c  alarm-sound.h  alarm0.raw  alarm1.raw  alarm2.raw  alarm3.raw  alarm4.raw  incbin.c  incbin.h
src/sound/raw-data/: alarm0.raw  alarm1.raw  alarm2.raw
src/source/: data-source.c  data-source.h
src/source/fake-data/: Makefile.am  demo-data-generator.c  demo-data-generator.h  demo-data.c
src/source/socket-can/: Makefile.am  socketcan-data.c  socketcan-data.h  socketcan-receiver.c  socketcan-receiver.h
test/: Makefile.am  cluster-api-test-telltale.cpp  cluster-api-test-trip.cpp  cluster-api-test.cpp  cluster-service-util-test.cpp  data-pool-client-test.cpp  data-pool-service-test-init.cpp  data-pool-service-test-socket.cpp  data-pool-service-test-timer.cpp
test/mock/: libpthread_mock.hpp  libsystemd_mock.hpp  stdlib_mock.hpp  syscall_io_mock.hpp
tools/: check-codingstyle.sh  check-complexity.sh  do-reformat-codingstyle.sh  run-test.sh
